# LanSync-

./: Cargo.toml  README.md
src/: discovery.rs  gui.html  gui.rs  main.rs  manifest.rs  sync_transfer.rs
src/transfer/: protocol.rs  receiver.rs  sender.rs
